--- a/css/resume.css
+++ b/css/resume.css
@@ -160,15 +160,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: rgb(56, 98, 189) !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: rgb(105, 68, 173) !important;
 }
 
 a {
-  color: #BD5D38;
+  color: rgb(105, 68, 173);
 }
 
 a:hover, a:focus, a:active {
